--- a/.sail/deploy/sail.yml
+++ b/.sail/deploy/sail.yml
@@ -66,7 +66,7 @@ services:
   # web service definition
   web:
     # Run the app with gunicorn
-    command: yarn start:prod
+    command: start-node
     # Port to forward http requests to
     http_port: 3000
     # Build instructions
